2013-07-11  Chris Michael

        * Ecore_Evas: Added functions to retieve the pixmap depth, visual, and colormap

2013-07-11  Chris Michael

        * Ecore_Evas: Updated doxygen comments for pixmap functions
        * Ecore_Evas: Check for valid interface pixmap_get function
before calling it.
        * Ecore_Evas: Removed need for prev_front pixmap field in
structure and just use a temporary variable.

2013-07-10  Cedric Bail

	* Eina: Add eina_tiler_empty.

2013-07-08  Chris Michael

        * Ecore_Evas: Added pointer abtractions (requested by Mike)

2013-07-08  Chris Michael

        * Ecore_Evas: Added functions got software_x11 and gl_x11
engines to create new ecore_evas which uses just a pixmap (no window).
           - add ecore_evas_software_x11_pixmap_new
           - add ecore_evas_gl_x11_pixmap_new
           - add ecore_evas_software_x11_pixmap_get
           - add ecore_evas_gl_x11_pixmap_get

2013-07-08  Mike Blumenkrantz

        * Eina: add eina_tiler_area_size_get

2013-07-06  Carsten Haitzler (The Rasterman)

        * Eina: Add direct eina file map populate controls

2013-07-04  Cedric Bail

	* Eina: add eina_tiler_area_size_set and eina_tiler_strict_set to make Eina_Tiler in par with Evas_Tilebuf.

2013-07-03  Shinwoo Kim

	* Ecore: add atoms - enable, disable - to support accessibility

2013-07-02  ChunEon Park (Hermet)

	* Evas: optimize proxy rendering. Rendering performance is increased up to 2x in some cases.

2013-07-02  Cedric Bail

	* Eet: force thread to always run during eet_cache_concurrency test.

2013-06-25  Tom Hacohen

	* Evas textblock: Fixed issue when parsing formats with quotes.

2013-06-28  Jiyoun Park

	* Evas: Fix jpeg loader cannot deal with exif information correctly

2013-06-26  Daniel Willmann

	* Evas: Fix evas_common_convert_yuv_42* functions to actually return
	the converted data.

2013-06-25  Tom Hacohen

	* Evas textblock: Fixed issue with textblocks without fonts
	segfaulting.

2013-06-24  Cedric Bail
