@@ -37,6 +37,7 @@ Additions:
     * Eet:
      - Add eet_mmap()
      - Add eet_data_descriptor_name_get()
+     - Add support EET_T_VALUE
     * Eo:
      - Add generic efl object infrastructure
      - Add debugging facility
